# programming-bitcoin

./: meson.build
examples/: ex01.cpp  ex02.cpp  ex03.cpp  meson.build
include/: meson.build
include/bitcoin/: algebra.hpp  ecc.hpp  meson.build  secp256k1.hpp
test/: arithmetics.cpp  field.cpp  meson.build  mod_int.cpp  secp256k1.cpp
